SLING-4832 - SlingPaxOptions.setIgnoredBundles added, with tests
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1687359 13f79535-47bb-0310-9956-ffa450edef68